Bug 1801270 - Always set aResult when returning NS_OK from GetDiskInfo r=xpcom-reviewers,jstutte, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D162374